fixed grid position and gap

--- a/index.css
+++ b/index.css
@@ -17,36 +17,29 @@ body {
 }
 
 .parent {
-    background-color: lemonchiffon;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     padding: 40px;
     margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0;
-    grid-row-gap: 0;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+}
+
+.parent > * {
+    background-color: lemonchiffon;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    padding: 40px;
 }
 
 .userInfo {
     grid-area: 1 / 1 / 3 / 3;
-    background-color: lemonchiffon;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    padding: 40px;
-    display: inline-block;
-    margin-left: 30px;
 
 }
 
 .auditRatio {
-    grid-area: 1 / 1 / 3 / 5;
-    background-color: lemonchiffon;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    padding: 40px;
-    margin-left: 30px;
+    grid-area: 1 / 3 / 3 / 5;
 }
 
 .xp {
